Fix z-index to actual maximum
I'm not sure where I got the number that was here, but it's not the
well-known maximum value for any browser.

Since our div is likely to be one of the last in the document, by
virtue of being dynamically injected after DOMReady, close #1909.

--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -103,7 +103,7 @@ $base-font-size: 14px;
   position: fixed;
   top: 0;
   left: 100%;
-  z-index: 2147483638;
+  z-index: 2147483647;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 
   &.annotator-collapsed {
